finishing election
